--- a/QualiteLogicielFront/src/index.html
+++ b/QualiteLogicielFront/src/index.html
@@ -2,15 +2,45 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>QualiteLogicielFront</title>
+  <title>Connexion | LocaMat</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="assets/logo.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--<link rel="stylesheet" href="style/index.css"/>-->
+  <!--<script type="text/javascript" src="src/index.js"></script>-->
 </head>
 <body class="mat-typography">
-  <app-root></app-root>
+  <app-root>
+    <header>
+      <h1>LocaMat</h1>
+      <h3>Gestion des emprunts de matériels informatiques</h3>
+    </header>
+    <div id="corps">
+      <h4>Connectez-vous pour utiliser le site.</h4>
+      <p>Entrez votre matricule/mail et votre mot de passe.</p>
+      <p>Si vous n'avez pas créé de mot de passe, entrez celui par défaut, qui vous a été fourni par un administrateur.</p>
+      <form id="form-connexion">
+        <table>
+          <tbody>
+          <tr>
+            <td><label>Matricule</label></td>
+            <td><input type="text" name="matricule" id="matricule" /></td>
+          </tr>
+          <tr>
+            <td><label>Mot de passe</label></td>
+            <td><input type="password" name="email" id="mail" required /></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td><input type="submit" value="Me connecter" id="btn-connexion"/></td>
+          </tr>
+          </tbody>
+        </table>
+      </form>
+    </div>
+  </app-root>
 </body>
 </html>
