Refactorisation de la structure

--- a/QualiteLogicielFront/src/index.html
+++ b/QualiteLogicielFront/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
   <title>Connexion | LocaMat</title>
@@ -13,34 +13,6 @@
   <!--<script type="text/javascript" src="src/index.js"></script>-->
 </head>
 <body class="mat-typography">
-  <app-root>
-    <header>
-      <h1>LocaMat</h1>
-      <h3>Gestion des emprunts de matériels informatiques</h3>
-    </header>
-    <div id="corps">
-      <h4>Connectez-vous pour utiliser le site.</h4>
-      <p>Entrez votre matricule/mail et votre mot de passe.</p>
-      <p>Si vous n'avez pas créé de mot de passe, entrez celui par défaut, qui vous a été fourni par un administrateur.</p>
-      <form id="form-connexion">
-        <table>
-          <tbody>
-          <tr>
-            <td><label>Matricule</label></td>
-            <td><input type="text" name="matricule" id="matricule" /></td>
-          </tr>
-          <tr>
-            <td><label>Mot de passe</label></td>
-            <td><input type="password" name="email" id="mail" required /></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td><input type="submit" value="Me connecter" id="btn-connexion"/></td>
-          </tr>
-          </tbody>
-        </table>
-      </form>
-    </div>
-  </app-root>
+  <app-root></app-root>
 </body>
 </html>
